[package]
name = "socket2-ext"
version = "0.1.0"
edition = "2021"
authors = ["cavivie <cavivie@gmail.com>"]
license = "MIT"
repository = "https://github.com/cavivie/socket2-ext"
homepage = "https://github.com/cavivie/socket2-ext"
description = """
An socket2 extension contains utilities for handling networking
sockets with a maximal amount of configuration possible intended.
"""
keywords = ["socket-ext", "socket2-ext", "extension", "socket", "network"]
categories = ["api-bindings", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["log"]

[dependencies]
tracing = { version = "0.1", default-features = false }
socket2 = { version = "0.5.6", features = ["all"] }

[target."cfg(unix)".dependencies]
libc = "0.2.150"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"

[features]
default = []
log = []
